--- a/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
+++ b/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Fri Apr 11 22:31:39 ICT 2025
+#Sun Apr 20 23:01:15 ICT 2025
 default.languagetoolchain.version=4.60
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.25\\packs\\Microchip\\PIC32MK-MC_DFP\\1.11.151
 conf.ids=default
@@ -9,5 +9,5 @@ host.id=g085-0tkf-1
 default.platformTool.md5=null
 configurations-xml=a61fb9f8deed87515b9d0b48619dfb5b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
-proj.dir=E\:\\Github\\ACIM\\FWLIB\\main\\Boards\\MK1\\mcc.X
+proj.dir=E\:\\Github\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
 host.platform=windows
