--- a/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
+++ b/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Apr 21 08:10:10 ICT 2025
+#Tue Apr 22 00:07:48 ICT 2025
 default.languagetoolchain.version=4.60
-default.Pack.dfplocation=C\:\\Program Files\\microchip\\MPLABX\\v6.25\\packs\\Microchip\\PIC32MK-MC_DFP\\1.11.151
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.25\\packs\\Microchip\\PIC32MK-MC_DFP\\1.11.151
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\microchip\\xc32\\v4.60\\bin
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.60\\bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=9fd32f1fddb30a021686652ad9cf7f89
-host.id=168c-miky-ac
+host.id=g085-0tkf-1
 default.platformTool.md5=null
 configurations-xml=a61fb9f8deed87515b9d0b48619dfb5b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
-proj.dir=F\:\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
+proj.dir=E\:\\Github\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
 host.platform=windows
