--- a/Boards/MK1/src/config/default/harmony-manifest-success.yml
+++ b/Boards/MK1/src/config/default/harmony-manifest-success.yml
@@ -4,14 +4,14 @@
 
 
 project: MK1
-creation_date: 2025-04-22T09:24:48.478+07:00[Asia/Bangkok]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
-operating_system: Windows 11
-mcc_mode: IDE            # [IDE|Standalone|Headless]
-mcc_version: v5.5.2
+creation_date: 2025-04-22T23:00:03.259+07:00[Asia/Bangkok]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+operating_system: Windows 10
+mcc_mode: Standalone            # [IDE|Standalone|Headless]
+mcc_version: v5.5.1
 mcc_core_version: v5.7.1
-mplabx_version: v6.25        # if MPLAB X plugin only
+mplabx_version: NA        # if MPLAB X plugin only
 harmony_version: v1.5.5
-compiler: XC32 4.60
+compiler: NA
 
 modules:
     - {name: "csp", version: "v3.22.2"}
