--- a/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
+++ b/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Apr 22 09:35:59 ICT 2025
+#Fri Apr 25 21:54:57 ICT 2025
 default.languagetoolchain.version=4.60
-default.Pack.dfplocation=C\:\\Program Files\\microchip\\MPLABX\\v6.25\\packs\\Microchip\\PIC32MK-MC_DFP\\1.11.151
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.25\\packs\\Microchip\\PIC32MK-MC_DFP\\1.11.151
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\microchip\\xc32\\v4.60\\bin
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.60\\bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=9fd32f1fddb30a021686652ad9cf7f89
-host.id=168c-miky-ac
-configurations-xml=f5824109a72f6aed711358773ca4d4dc
+host.id=g085-0tkf-1
+configurations-xml=78867618768d89589da324679c05d5f4
 default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=9c1569a5576813e12972559e1a91a529
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
-proj.dir=F\:\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
+proj.dir=E\:\\Github\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
 host.platform=windows
