--- a/Boards/MK1/mcc.X/mcc-manifest-autosave.yml
+++ b/Boards/MK1/mcc.X/mcc-manifest-autosave.yml
@@ -2,20 +2,20 @@
 
 manifest_file_version: 1.0.0
 project: mcc
-creation_date: 2025-06-05T23:04:39.325+07:00[Asia/Bangkok]
-operating_system: Windows 10
+creation_date: 2025-06-09T14:01:07.125+07:00[Asia/Bangkok]
+operating_system: Windows 11
 mcc_mode: IDE
 mcc_mode_version: v6.25
 device_name: PIC32MK1024MCM064
 compiler: XC32 4.60
-mcc_version: 5.6.2
-mcc_core_version: 5.8.2
-content_manager_version: 6.0.1
+mcc_version: 5.5.2
+mcc_core_version: 5.7.1
+content_manager_version: 5.0.1
 is_mcc_offline: false
 is_using_prerelease_versions: false
 mcc_content_registries: https://registry.npmjs.org/
-device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name: Bundled,
-  version: Bundled}
+device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name: Harmony
+    V3, version: 1.5.5}
 packs: {name: PIC32MK-MC_DFP, version: 1.11.151}
 modules:
 - {name: csp, type: HARMONY, version: v3.22.4}
