--- a/Boards/MK1/mcc.X/mcc_default/components/uart2.yml
+++ b/Boards/MK1/mcc.X/mcc_default/components/uart2.yml
@@ -105,7 +105,7 @@ data:
             value: '0'
           type: Dynamic
         - attributes:
-            value: '2'
+            value: '1'
           type: User
         type: Values
       type: KeyValueSet
@@ -116,7 +116,7 @@ data:
       - children:
         - attributes:
             id: uart2
-            value: 'true'
+            value: 'false'
           type: Dynamic
         type: Values
       type: Boolean
