--- a/Boards/MK1/mcc.X/mcc_default/components/adchs.yml
+++ b/Boards/MK1/mcc.X/mcc_default/components/adchs.yml
@@ -339,6 +339,24 @@ data:
           type: User
         type: Values
       type: Boolean
+    ADCCSS1__CSS6:
+      attributes:
+        id: ADCCSS1__CSS6
+      children:
+      - children:
+        - attributes:
+            id: visible
+          children:
+          - type: Value
+            value: 'true'
+          type: Boolean
+        type: Attributes
+      - children:
+        - attributes:
+            value: 'true'
+          type: User
+        type: Values
+      type: Boolean
     ADCCSS1__CSS7:
       attributes:
         id: ADCCSS1__CSS7
@@ -533,7 +551,7 @@ data:
       children:
       - children:
         - attributes:
-            value: 'false'
+            value: 'true'
           type: User
         type: Values
       type: Boolean
@@ -571,7 +589,7 @@ data:
             value: 'false'
           type: Dynamic
         - attributes:
-            value: 'false'
+            value: 'true'
           type: User
         type: Values
       type: Boolean
@@ -639,7 +657,7 @@ data:
       - children:
         - attributes:
             id: adchs
-            value: '0'
+            value: '64'
           type: Dynamic
         type: Values
       type: Hex
@@ -651,6 +669,17 @@ data:
         - attributes:
             id: adchs
             value: '262144'
+          type: Dynamic
+        type: Values
+      type: Hex
+    ADCHS_ADCDSTAT:
+      attributes:
+        id: ADCHS_ADCDSTAT
+      children:
+      - children:
+        - attributes:
+            id: adchs
+            value: '0'
           type: Dynamic
         type: Values
       type: Hex
@@ -668,6 +697,17 @@ data:
     ADCHS_ADCGIRQEN2:
       attributes:
         id: ADCHS_ADCGIRQEN2
+      children:
+      - children:
+        - attributes:
+            id: adchs
+            value: '0'
+          type: Dynamic
+        type: Values
+      type: Hex
+    ADCHS_ADCIMCON1:
+      attributes:
+        id: ADCHS_ADCIMCON1
       children:
       - children:
         - attributes:
@@ -793,7 +833,7 @@ data:
       - children:
         - attributes:
             id: adchs
-            value: '146997248'
+            value: '164560896'
           type: Dynamic
         type: Values
       type: Hex
@@ -817,7 +857,7 @@ data:
             id: visible
           children:
           - type: Value
-            value: 'false'
+            value: 'true'
           type: Boolean
         type: Attributes
       - children:
@@ -858,7 +898,7 @@ data:
             id: visible
           children:
           - type: Value
-            value: 'false'
+            value: 'true'
           type: Boolean
         type: Attributes
       - children:
@@ -962,7 +1002,7 @@ data:
             id: visible
           children:
           - type: Value
-            value: 'false'
+            value: 'true'
           type: Boolean
         type: Attributes
       - children:
@@ -1003,7 +1043,7 @@ data:
             id: visible
           children:
           - type: Value
-            value: 'false'
+            value: 'true'
           type: Boolean
         type: Attributes
       - children:
@@ -1028,6 +1068,14 @@ data:
       attributes:
         id: ADCHS_TADC7
       children:
+      - children:
+        - attributes:
+            id: visible
+          children:
+          - type: Value
+            value: 'true'
+          type: Boolean
+        type: Attributes
       - children:
         - attributes:
             id: adchs
@@ -1303,7 +1351,7 @@ data:
         type: Attributes
       - children:
         - attributes:
-            value: '0'
+            value: '3'
           type: User
         type: Values
       type: KeyValueSet
@@ -1365,7 +1413,7 @@ data:
             value: '1'
           type: Dynamic
         - attributes:
-            value: '2'
+            value: '1'
           type: User
         type: Values
       type: KeyValueSet
@@ -1442,6 +1490,28 @@ data:
           type: Dynamic
         type: Values
       type: String
+    ADC_DMA_ENABLED:
+      attributes:
+        id: ADC_DMA_ENABLED
+      children:
+      - children:
+        - attributes:
+            id: adchs
+            value: 'false'
+          type: Dynamic
+        type: Values
+      type: Boolean
+    ADC_DMA_INT_ENABLED:
+      attributes:
+        id: ADC_DMA_INT_ENABLED
+      children:
+      - children:
+        - attributes:
+            id: adchs
+            value: 'false'
+          type: Dynamic
+        type: Values
+      type: Boolean
     ADC_GET_RESULT_API:
       attributes:
         id: ADC_GET_RESULT_API
@@ -1548,6 +1618,16 @@ data:
     AN50:
       attributes:
         id: AN50
+      children:
+      - children:
+        - attributes:
+            value: 'true'
+          type: User
+        type: Values
+      type: Boolean
+    AN6:
+      attributes:
+        id: AN6
       children:
       - children:
         - attributes:
