--- a/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
+++ b/Boards/MK1/mcc.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Jun 09 14:01:00 ICT 2025
+#Wed Oct 01 21:23:05 ICT 2025
 default.languagetoolchain.version=4.60
-default.Pack.dfplocation=C\:\\Program Files\\microchip\\MPLABX\\v6.25\\packs\\Microchip\\PIC32MK-MC_DFP\\1.11.151
+default.Pack.dfplocation=C\:\\Users\\sampi\\.mchp_packs\\Microchip\\PIC32MK-MC_DFP\\1.12.263
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\microchip\\xc32\\v4.60\\bin
-default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=9fd32f1fddb30a021686652ad9cf7f89
-host.id=168c-miky-ac
-configurations-xml=1c875ed1948a0667dd39d71b6f7a6e49
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.60\\bin
+default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=23643c305894dfcaae7bbdddd560f508
+host.id=0
+configurations-xml=6290212263e94d0b9b63ba227defd4af
 default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=9c1569a5576813e12972559e1a91a529
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
-proj.dir=F\:\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
+proj.dir=E\:\\Github\\ACIM\\APPS\\main\\FwLib\\Boards\\MK1\\mcc.X
 host.platform=windows
